# atlas-trader

./: .gitignore  README.md  pyproject.toml
scripts/: run_historical_read.py  run_watchlist_server.py
src/atlas_trader/: __init__.py  main.py
src/atlas_trader/analysis/: __init__.py  candles.py  fundamentals.py  moving_averages.py  multi_timeframe.py  ranges.py  support_resistance.py  trend_evidence.py  trend_health.py  trends.py  volatility.py  volume.py
src/atlas_trader/backtesting/: __init__.py  engine.py
src/atlas_trader/data/: __init__.py  live.py  models.py
src/atlas_trader/reporting/: pdf_report.py
src/atlas_trader/server/: __init__.py  watchlist.py
tests/: test_backtesting.py  test_candles.py  test_fundamentals.py  test_live_data.py  test_moving_averages.py  test_multi_timeframe.py  test_ranges.py  test_run_historical_read_script.py  test_support_resistance.py  test_trend_evidence.py  test_trends.py  test_volatility.py  test_volume.py  test_watchlist_server.py
